--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "aos": "^2.3.4",
     "astro": "^5.7.7"
   },
   "devDependencies": {
